--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,10 @@ steps:
 - script: |
     git diff --name-only --diff-filter=AMR HEAD^1 HEAD | xargs -I '{}' cp --parents -r '{}' $(Build.BinariesDirectory)
 
-    cp $(Build.Repository.LocalPath)/*.* $(Build.BinariesDirectory)
+    cp -r $(Build.Repository.LocalPath)/au-azure-databricks-cicd/analytics/ $(Build.BinariesDirectory)
+    cp -r $(Build.Repository.LocalPath)/au-azure-databricks-cicd/analytics/dbrks_nhs_app/ $(Build.BinariesDirectory)
+    cp -r $(Build.Repository.LocalPath)/au-azure-databricks-cicd/orchestration/ $(Build.BinariesDirectory)
+
 
 - task: ArchiveFiles@2
   inputs:
