--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,9 @@ steps:
 
 - script: |
     git diff --name-only --diff-filter=AMR HEAD^1 HEAD | xargs -I '{}' cp --parents -r '{}' $(Build.BinariesDirectory)
-    cp -r $(Build.Repository.LocalPath)/*.* $(Build.BinariesDirectory)
+    cp -r $(Build.Repository.LocalPath)/analytics/ $(Build.BinariesDirectory)
+    cp -r $(Build.Repository.LocalPath)/analytics/dbrks_nhs_app/ $(Build.BinariesDirectory)
+    cp -r $(Build.Repository.LocalPath)/orchestration/ $(Build.BinariesDirectory)
     
 - task: ArchiveFiles@2
   inputs:
