Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,11 +21,17 @@ steps:
   displayName: 'Get Latest Branch'
 
 - script: |
+    cd $(Build.Repository.LocalPath)/functions
+    python3 setup.py sdist bdist_wheel
+    ls dist/
+  displayName: 'Build Python Wheel for Libs'
+
+- script: |
     git diff --name-only --diff-filter=AMR HEAD^1 HEAD | xargs -I '{}' cp --parents -r '{}' $(Build.BinariesDirectory)
     cp -r $(Build.Repository.LocalPath)/analytics/ $(Build.BinariesDirectory)
     cp -r $(Build.Repository.LocalPath)/ingestion/ $(Build.BinariesDirectory)
     cp -r $(Build.Repository.LocalPath)/orchestration/ $(Build.BinariesDirectory)
-    cp -r $(Build.Repository.LocalPath)/functions/ $(Build.BinariesDirectory)
+    cp -r $(Build.Repository.LocalPath)/functions/dist/*.* $(Build.BinariesDirectory)
     
 - task: ArchiveFiles@2
   inputs:
