--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_dbrks.json
@@ -107,7 +107,7 @@
 		"source_adl_file_system": "digitallandcontainer",
 		"ingestion": {
 			"sink_path": "land/nhsdigital/nhs_app/timestamp/snapshot/",
-			"source_path": "Prod/nhs_app/land/",
+			"source_path": "/nhs_app/land/",
 			"databricks_notebook": "/databricks/au-azure-databricks-cicd/ingestion/dbrks_nhs_app/dbrks_nhs_app_usage_raw"
 		},
 		"raw": {
