--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
@@ -50,6 +50,16 @@
 			"id": "M177",
 			"full_name": "Substrakt - accountAdminJump Off Clicks",
 			"short_name":"nhs_app_jumpoff_substrakt_accountAdmin_day_count"
+			},
+			{
+			"id": "M176",
+			"full_name": "Substrakt - messages Jump Off Clicks",
+			"short_name":"nhs_app_jumpoff_substrakt_messages_day_count"
+			},
+			{
+			"id": "M178",
+			"full_name": "Substrakt - Patient Participation Group Jump Off Clicks",
+			"short_name":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count"
 			}
 		]
 	}]},
@@ -135,6 +145,18 @@
 				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_substrakt_accountAdmin_day_count/",
 				"sink_file": "nhs_app_jumpoff_engage_medical_day_count.csv",
 				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_substrakt_accountAdmin_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_substrakt_messages_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_substrakt_messages_day_count/",
+				"sink_file": "nhs_app_jumpoff_substrakt_messages_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_substrakt_messages_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count/",
+				"sink_file": "nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count"
 				}
 			]
 		},
@@ -174,6 +196,14 @@
 			{
 				"metric":"nhs_app_jumpoff_substrakt_accountAdmin_day_count",
 				"sink_table":"nhs_app_jumpoff_substrakt_accountAdmin_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_substrakt_messages_day_count",
+				"sink_table":"nhs_app_jumpoff_substrakt_messages_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count",
+				"sink_table":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count" 
 			}
 		         ]
 
