--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
@@ -60,6 +60,11 @@
 			"id": "M178",
 			"full_name": "Substrakt - Patient Participation Group Jump Off Clicks",
 			"short_name":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count"
+			},
+			{
+			"id": "M169",
+			"full_name": "Substrakt - Patient Participation Group Jump Off Clicks",
+			"short_name":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count"
 			}
 		]
 	}]},
