--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
@@ -60,6 +60,16 @@
 			"id": "M178",
 			"full_name": "Substrakt - Patient Participation Group Jump Off Clicks",
 			"short_name":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count"
+			},
+			{
+			"id": "M164",
+			"full_name": "Manage Your Referral Jump Off Clicks",
+			"short_name":"nhs_app_jumpoff_esr_manageYourReferra_day_count"
+			},
+			{
+			"id": "M166",
+			"full_name": "PKB - messagesJump Off Clickss",
+			"short_name":"nhs_app_jumpoff_PKB_messages_day_count"
 			}
 		]
 	}]},
@@ -157,6 +167,18 @@
 				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count/",
 				"sink_file": "nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count.csv",
 				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_esr_manageYourReferra_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_esr_manageYourReferra_day_count/",
+				"sink_file": "nhs_app_jumpoff_esr_manageYourReferra_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_esr_manageYourReferra_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_PKB_messages_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_PKB_messages_day_count/",
+				"sink_file": "nhs_app_jumpoff_PKB_messages_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_PKB_messages_day_count"
 				}
 			]
 		},
@@ -204,6 +226,14 @@
 			{
 				"metric":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count",
 				"sink_table":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_esr_manageYourReferra_day_count",
+				"sink_table":"nhs_app_jumpoff_esr_manageYourReferra_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_PKB_messages_day_count",
+				"sink_table":"nhs_app_jumpoff_PKB_messages_day_count" 
 			}
 		         ]
 
