--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
@@ -63,8 +63,13 @@
 			},
 			{
 			"id": "M169",
-			"full_name": "Substrakt - Patient Participation Group Jump Off Clicks",
-			"short_name":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count"
+			"full_name": "PKB - appointmentsJump Off Clicks",
+			"short_name":"nhs_app_jumpoff_pkb_appointments_day_count"
+			},
+			{
+			"id": "M170",
+			"full_name": "PKB - healthTrackersJump Off Clicks",
+			"short_name":"nhs_app_jumpoff_pkb_healthTrackers_day_count"
 			}
 		]
 	}]},
@@ -162,6 +167,18 @@
 				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count/",
 				"sink_file": "nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count.csv",
 				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_pkb_appointments_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_pkb_appointments_day_count/",
+				"sink_file": "nhs_app_jumpoff_pkb_appointments_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_pkb_appointments_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_pkb_healthTrackers_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_pkb_healthTrackers_day_count/",
+				"sink_file": "nhs_app_jumpoff_pkb_healthTrackers_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_pkb_healthTrackers_day_count"
 				}
 			]
 		},
@@ -209,6 +226,14 @@
 			{
 				"metric":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count",
 				"sink_table":"nhs_app_jumpoff_substrakt_patientparticipationgroup_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_pkb_appointments_day_count",
+				"sink_table":"nhs_app_jumpoff_pkb_appointments_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_pkb_healthTrackers_day_count",
+				"sink_table":"nhs_app_jumpoff_pkb_healthTrackers_day_count" 
 			}
 		         ]
 
