--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_dbrks.json
@@ -231,6 +231,9 @@
 				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app/nhs_app_usage_organ_donation_lookup_day_count/",
 				"sink_file": "nhs_app_usage_organ_donation_lookup_day_count.csv",
 				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_usage_organ_donation_lookup_day_count"
+				},
+				{
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/tables/nhs_app/nhs_app_uptake"
 				}
       ]       
 		},
