--- a/config/pipelines/nhsx-au-analytics/config_duec_eddi_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_duec_eddi_dbrks.json
@@ -22,7 +22,7 @@
 			"databricks_notebook": "/databricks/au-azure-databricks-cicd/ingestion/dbrks_duec_eddi/dbrks_duec_eddi_raw"
 		},
 		"raw": {		
-			"snapshot_source_path": "land/datainbox/email_attachment/appointment-report@eddi.nhs.uk/[data] EDDI Appointment Report/",
+			"snapshot_source_path": "land/datainbox/email_attachment/appointment-report@eddi.nhs.uk/EDDI Appointment Report/",
 			"appended_path": "raw/nhsdigital/email_attachment/parquet/duec_eddi_report/historical/",
 			"appended_file": "duec_eddi_report_historical.parquet"
 		},
