--- a/config/pipelines/reference_tables/config_ref_data_copy.json
+++ b/config/pipelines/reference_tables/config_ref_data_copy.json
@@ -37,7 +37,25 @@
             "source_file": "table_ons_population_demography_historical.parquet",
             "sink_path": "proc/sources/ncdr_etp/adf_v2/table/ons_population_demography/historical/",
             "sink_file": "table_ons_population_demography_historical.parquet"
-            }
+            },
+			{
+			"source_path":"proc/sources/ncdr_etp/adf_v2/table/admitted_patient_care_discharges/full/",
+			"source_file": "admitted_patient_care_discharges_full.parquet",
+			"sink_path": "proc/sources/ncdr_etp/adf_v2/table/admitted_patient_care_discharges/full/",
+			"sink_file": "admitted_patient_care_discharges_full.parquet"
+			},
+			{
+			"source_path":"proc/sources/ncdr_etp/adf_v2/table/emergency_care_discharges/full/",
+			"source_file": "emergency_care_discharges_full.parquet",
+			"sink_path": "proc/sources/ncdr_etp/adf_v2/table/emergency_care_discharges/full/",
+			"sink_file": "emergency_care_discharges_full.parquet"
+			},
+			{
+			"source_path":"proc/sources/ncdr_etp/adf_v2/table/mental_health_related_discharges/full/",
+			"source_file": "mental_health_related_discharges_full.parquet",
+			"sink_path": "proc/sources/ncdr_etp/adf_v2/table/mental_health_related_discharges/full/",
+			"sink_file": "mental_health_related_discharges_full.parquet"
+			}
         ]
 	}
 }
