--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
@@ -80,6 +80,16 @@
 			"id": "M166",
 			"full_name": "PKB - messagesJump Off Clickss",
 			"short_name":"nhs_app_jumpoff_PKB_messages_day_count"
+			},
+			{
+			"id": "M167",
+			"full_name": "PKB - appointmentsJump Off Clicks",
+			"short_name":"nhs_app_jumpoff_pkb_appointments_day_count"
+			},
+			{
+			"id": "M168",
+			"full_name": "PKB - testResultsJump Off Clicks",
+			"short_name":"nhs_app_jumpoff_pkb_test_results_day_count"
 			}
 		]
 	}]},
@@ -201,6 +211,18 @@
 				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_PKB_messages_day_count/",
 				"sink_file": "nhs_app_jumpoff_PKB_messages_day_count.csv",
 				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_PKB_messages_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_pkb_appointments_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_pkb_appointments_day_count/",
+				"sink_file": "nhs_app_jumpoff_pkb_appointments_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/nhs_app_jumpoff_pkb_appointments_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_pkb_test_results_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_pkb_test_results_day_count/",
+				"sink_file": "nhs_app_jumpoff_pkb_test_results_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/nhs_app_jumpoff_pkb_test_results_day_count"
 				}
 			]
 		},
@@ -264,6 +286,14 @@
 			{
 				"metric":"nhs_app_jumpoff_PKB_messages_day_count",
 				"sink_table":"nhs_app_jumpoff_PKB_messages_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_pkb_appointments_day_count",
+				"sink_table":"nhs_app_jumpoff_pkb_appointments_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_pkb_test_results_day_count",
+				"sink_table":"nhs_app_jumpoff_pkb_test_results_day_count" 
 			}
 		         ]
 
