--- a/config/pipelines/nhsx-au-analytics/config_shared_care_record_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_shared_care_record_dbrks.json
@@ -73,16 +73,25 @@
 		"staging":[    
     			{
 					"metric":"shcr_partners_stp_data_month_count",
+					"stored_procedure":"[dbo].[stored_proc_shcr_partners_stp_data_month_count]",
+					"source_path":"proc/projects/nhsx_slt_analytics/shcr/partners_connected/data_month_count/",
+					"source_file":"shcr_partners_stp_data_month_count.parquet",
 					"sink_table":"shcr_partners_stp_data_month_count"
 				},    
     			{
 					"metric":"shcr_partners_trust_data_month_count",
+					"stored_procedure":"[dbo].[stored_proc_shcr_partners_trust_data_month_count]",
+					"source_path":"proc/projects/nhsx_slt_analytics/shcr/partners_connected/data_month_count/",
+					"source_file":"shcr_partners_trust_data_month_count.parquet",
 					"sink_table":"shcr_partners_trust_data_month_count"
 				},     
     			{
 					"metric":"shcr_partners_pcn_data_month_count",
+					"stored_procedure":"[dbo].[stored_proc_shcr_partners_pcn_data_month_count]",
+					"source_path":"proc/projects/nhsx_slt_analytics/shcr/partners_connected/data_month_count/",
+					"source_file":"shcr_partners_pcn_data_month_count.parquet",
 					"sink_table":"shcr_partners_pcn_data_month_count"
-				}   
+				}      
 			]
 	}
 }
