--- a/config/pipelines/nhsx-au-analytics/config_shared_care_record_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_shared_care_record_dbrks.json
@@ -38,35 +38,35 @@
 		},
 		"raw": {
 			"source_path": "land/sharepoint/Shared Documents/nhsx_au_ingestion/shcr/timestamp/xlsx/all_tables/",
-			"sink_path": "raw/sharepoint/timestamp/csv/shcr/snapshot/"
+			"sink_path": "raw/sharepoint/timestamp/parquet/shcr/snapshot/"
 		},
 		"proc": {
-			"source_path": "raw/sharepoint/timestamp/csv/shcr/snapshot/",
-			"sink_path": "proc/sources/shcr/sharepoint/csv/all_tables/snapshot/",
+			"source_path": "raw/sharepoint/timestamp/parquet/shcr/snapshot/",
+			"sink_path": "proc/sources/shcr/sharepoint/parquet/all_tables/snapshot/",
 			"files": [
 				{
-				"file_name":"shcr_partners_stp_data_month_count.csv"
+				"file_name":"shcr_partners_stp_data_month_count.parquet"
 				},
 				{
-				"file_name":"shcr_partners_trust_data_month_count.csv"
+				"file_name":"shcr_partners_trust_data_month_count.parquet"
 				},
 				{
-				"file_name":"shcr_partners_pcn_data_month_count.csv"
+				"file_name":"shcr_partners_pcn_data_month_count.parquet"
 				}
 			]
 		},
 		"project": {
-			"source_path": "proc/sources/shcr/sharepoint/csv/all_tables/snapshot/",
+			"source_path": "proc/sources/shcr/sharepoint/parquet/all_tables/snapshot/",
 			"sink_path": "proc/projects/nhsx_slt_analytics/shcr/partners_connected/data_month_count/",
 			"files": [
 				{
-				"file_name":"shcr_partners_stp_data_month_count.csv"
+				"file_name":"shcr_partners_stp_data_month_count.parquet"
 				},
 				{
-				"file_name":"shcr_partners_trust_data_month_count.csv"
+				"file_name":"shcr_partners_trust_data_month_count.parquet"
 				},
 				{
-				"file_name":"shcr_partners_pcn_data_month_count.csv"
+				"file_name":"shcr_partners_pcn_data_month_count.parquet"
 				}
 			]
 		},
