--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
@@ -223,6 +223,12 @@
 				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_pkb_test_results_day_count/",
 				"sink_file": "nhs_app_jumpoff_pkb_test_results_day_count.csv",
 				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/dbrks_nhs_app_jumpoff_pkb_test_results_day_count"
+				},
+				{
+				"metric": "nhs_app_jumpoff_econsult_day_count",
+				"sink_path": "proc/projects/nhsx_slt_analytics/national_digital_channels/nhs_app_jumpoff/nhs_app_jumpoff_econsult_day_count/",
+				"sink_file": "nhs_app_jumpoff_econsult_day_count.csv",
+				"databricks_notebook": "/databricks/au-azure-databricks-cicd/analytics/dbrks_nhs_app/nhs_app_jumpoff_econsult_day_count"
 				}
 			]
 		},
@@ -294,8 +300,18 @@
 			{
 				"metric":"nhs_app_jumpoff_pkb_test_results_day_count",
 				"sink_table":"nhs_app_jumpoff_pkb_test_results_day_count" 
+			},
+			{
+				"metric":"nhs_app_jumpoff_econsult_day_count",
+				"sink_table":"nhs_app_jumpoff_econsult_day_count" 
 			}
+
 		         ]
 
 		}
 	}
+
+
+
+
+	
