Added meta data for M179

--- a/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
+++ b/config/pipelines/nhsx-au-analytics/config_nhs_app_jumpoff_dbrks.json
@@ -90,6 +90,11 @@
 			"id": "M168",
 			"full_name": "PKB - testResultsJump Off Clicks",
 			"short_name":"nhs_app_jumpoff_pkb_test_results_day_count"
+			},
+			{
+			"id": "M179",
+			"full_name": "eConsultJump Off Clicks",
+			"short_name":"nhs_app_jumpoff_econsult_day_count"
 			}
 		]
 	}]},
